--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
