--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.7",
+    "@gluestack-style/react": "^1.0.16",
+    "@gluestack-ui/config": "^1.0.3",
+    "@gluestack-ui/themed": "^1.0.16",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^1.9.7",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
@@ -22,6 +25,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^13.4.0",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "vector-icons": "^0.1.0"
