--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@reduxjs/toolkit": "^1.9.7",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.15",
+    "expo-font": "~11.4.0",
+    "expo-image-picker": "^14.5.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
